Misc log cleanups, removed commons-io, updated to latest JDA beta (#146)